test/extern/ferguson/deinit-extern-record.good
deinit-extern-record.chpl:4: error: deinit may not be currently defined for extern types
