test/extern/ferguson/deinit-extern-record.chpl
extern record myExternRecord {
}

proc myExternRecord.deinit() {
}
